Change valentine proposal name in index(1).html

--- a/index(1).html
+++ b/index(1).html
@@ -264,7 +264,7 @@
                 </div>
             </div>
 
-            <h1>nirali will you be my valentine?</h1>
+            <h1>Shannu will you be my valentine?</h1>
 
             <div class="buttons">
                 <button class="yes-btn" onclick="handleYes()">Yes</button>
